--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "materialize";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 // Your CSS partials
 @import "layouts/index";
