--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -8,8 +8,8 @@
   color: white;
 }
 .alert-info {
-  background: $green;
+  background: #32B796;
 }
 .alert-warning {
-  background: $red;
+  background: #EE5F5B;
 }
