--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
-// Specific CSS for your home-page
+.card-content {
+  height: 200px;
+}
+
+#reload {
+  position: fixed;
+  bottom: 10;
+  right: 10;
+}
