--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,12 @@
 <div class="container">
-  <div class="row">
+  <div  id='posts-container' class="row">
     <% @posts.each do |post| %>
-    <div class="col s12 m6 l4">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title"><%= post.title %></span>
-            <p><%= pluralize(post.score, 'point') %> by <b><%= post.author %></b> in <%= post.category %> <%= posted_at_display(post.posted_at) %></p>
-          </div>
-          <div class="card-action">
-            <%= link_to 'go to post\'s website', post.url %>
-          </div>
-        </div>
-      </div>
+      <%= render 'post_card', post: post %>
     <% end %>
   </div>
 </div>
 <div class="fixed-action-btn horizontal">
-  <a class="btn-floating btn-large waves-effect waves-light light-blue darken-2 pulse">
+  <%= link_to '/posts/refresh', class: 'btn-floating btn-large waves-effect waves-light light-blue darken-2 pulse', remote: true do %>
     <i class="large material-icons">sync</i>
-  </a>
+  <% end %>
 </div>
