--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
   <nav class="light-blue darken-2">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">Hacker News Materialize</a>
+      <%= link_to 'Hacker News Materialize', root_path, class: 'brand-logo center' %>
     </div>
   </nav>
 </div>
